--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
