--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.11",
+    "framer-motion": "^11.17.0",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "^15.1.4",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
+    "typescript": "^5.7.3",
+    "@types/node": "^20.17.12",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "postcss": "^8.5.0",
+    "tailwindcss": "^3.4.17",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.2"
   }
 }
