--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "typescript": "^5.7.3",
